annoying letter spacing web issues

--- a/sass/layout/_l--splash.scss
+++ b/sass/layout/_l--splash.scss
@@ -69,6 +69,7 @@
       @include adjust-font-size-to($fs-xxxl);
       margin: 0;
       padding: 0;
+      margin-right: -.1em;
       margin-bottom: 30px;
       padding-bottom: 30px;
       position: relative;
